--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -60,6 +60,12 @@
 			
 		    <%= task.task_content %>
 		<% end %>
+	<h2>TEST</h2>
+		<% @day.tasks.each do |task| %>
+			
+		    <%= task.task_content %>
+		<% end %>
+
 
 </div>
 
