revise more on has many through

--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -55,15 +55,11 @@
 		<p>8. <%= @day.day_task_8 %></p>
 		<p>9. <%= @day.day_task_9 %></p>
 		<p>10. <%= @day.day_task_10 %></p>
-	<h2>Tasks through hours</h2>
-		<% @day.tasks.each do |task| %>
-			
-		    <%= task.task_content %>
-		<% end %>
+
 	<h2>TEST</h2>
 		<% @day.tasks.each do |task| %>
 			
-		    <%= task.task_content %>
+		    <p><%= task.task_content %></p>
 		<% end %>
 
 
