--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,7 @@
 <h2>Task:  <%= @task.task_content %> </h2>
+<h2>Belongs to Day:  <%= @task.day_id %> </h2>
+<h2>Belongs to Hour:  <%= @task.hour_id %> </h2>
+
 
 <%= link_to("Edit #{@task.task_content}", edit_task_path) %><br>
 <%= link_to("Delete #{@task.task_content}", task_path(@task), method: :delete, data: { confirm: 'Are you sure?' } ) %>
