--- a/app/views/days/edit.html.erb
+++ b/app/views/days/edit.html.erb
@@ -66,21 +66,15 @@
   9PM: <%= f.text_field :day_hour_21 %><br><br>
 
   <label>Hours and Task Content:</label><br>
-  <p>if I had already generated hours and task is copied for all numbers</p><br>
-    
-
-    <%= f.fields_for :tasks do |task| %>
-      <% @day.hours.each do |hour|%>
-
-          <%= hour.hour_number %> <%= hour.id %> <%= task.text_field :hour_id %>    
-
-      <% end %>
-      <%= task.text_field :task_content %> <br>
-        
-    <% end %>
+  <p>If you haven't already, please go generate some hours. </p>
 
 
-  <br>
+  <label>what is this?</label><br>
+  <%= f.fields_for :tasks do |task| %>
+    <%= task.hidden_field :hour_id %> <%= task.text_field :id %><%= task.text_field :task_content %><br>
+  <% end %><br>bye<br>
+
+
   <label>Tasks: </label><br>
   1. <%= f.text_field :day_task_1 %><br>
   2. <%= f.text_field :day_task_2 %><br>
