fix update method day

--- a/app/views/days/_form.html.erb
+++ b/app/views/days/_form.html.erb
@@ -55,6 +55,7 @@
     <%= f.fields_for :tasks do |task| %>
       <%= hour.hour_number %> <%= hour.id %> 
       <%= task.text_field :task_content %> 
+      <%= task.hidden_field :day_id, :value => @day.id %>
       <%= task.hidden_field :hour_id, :value => hour.id %><br>
     <% end %><br>
   <% end %>
