--- a/app/views/days/edit.html.erb
+++ b/app/views/days/edit.html.erb
@@ -65,15 +65,10 @@
   8PM: <%= f.text_field :day_hour_20 %><br>
   9PM: <%= f.text_field :day_hour_21 %><br><br>
 
-  <label>Hours and Task Content:</label><br>
-  <p>If you haven't already, please go generate some hours. </p>
-
-
-  <label>what is this?</label><br>
+  <label>Edit your tasks:</label><br>
   <%= f.fields_for :tasks do |task| %>
-    <%= task.text_field :id %> <%= task.hidden_field :hour_id %> <%= task.hidden_field :day_id %>  <%= task.text_field :task_content %><br>
-  <% end %><br>bye<br>
-
+    <%= task.hidden_field :id %> <%= task.hidden_field :hour_id %> <%= task.hidden_field :day_id %>  <%= task.text_field :task_content %><br>
+  <% end %><br>
 
   <label>Tasks: </label><br>
   1. <%= f.text_field :day_task_1 %><br>
@@ -87,8 +82,6 @@
   9. <%= f.text_field :day_task_9 %><br>
   10. <%= f.text_field :day_task_10 %><br>
 
-  
-
   <label>Notes: </label><br>
   <%= f.text_field :day_notes %><br>
 
@@ -99,9 +92,6 @@
 
   <label>Improvement for Tomorrow: </label><br>
   <%= f.text_field :day_improvement %><br>
-
-
-
  
   <%= f.submit %>
 <% end %>
