fill out spec file

--- a/app/views/hours/new.html.erb
+++ b/app/views/hours/new.html.erb
@@ -1,4 +1,5 @@
 <h1>New Hour Form</h1>
+<p>Please create your hours in ascending order (1, 2, 3...).</p>
 
 <% if @hour.errors.any? %>
   <div id="error_explanation">
