--- a/app/views/days/edit.html.erb
+++ b/app/views/days/edit.html.erb
@@ -67,7 +67,7 @@
 
   <label>Edit your tasks:</label><br>
   <%= f.fields_for :tasks do |task| %>
-    <%= task.object.hour.hour_number %> <%= task.hidden_field :id %> <%= task.hidden_field :hour_id %> <%= task.hidden_field :day_id %>  <%= task.text_field :task_content %><br>
+    <%= task.object.hour.hour_number %>.<%= task.hidden_field :id %> <%= task.hidden_field :hour_id %> <%= task.hidden_field :day_id %>  <%= task.text_field :task_content %><br>
   <% end %><br>
 
   <label>Tasks: </label><br>
