edit show day view

--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -1,78 +1,74 @@
 <h1>Day of: <%= @day.day_day_date %></h1>
 
-<div>
-	<h2>3 things you are grateful for</h2>
-		<p>1. <%= @day.day_grateful_1 %></p>
-		<p>2. <%= @day.day_grateful_2 %></p>
-		<p>3. <%= @day.day_grateful_3 %></p>
-	<h2>3 things you are excited for</h2>
-		<p>1. <%= @day.day_excited_1 %></p>
-		<p>2. <%= @day.day_excited_2 %></p>
-		<p>3. <%= @day.day_excited_3 %></p>
-	<h2>Affirmation</h2>
-		<p><%= @day.day_affirmation %></p>
-	<h2>Focus</h2>
-		<p><%= @day.day_focus %></p>
-	<h2>Exercise</h2>
-		<p><%= @day.day_exercise %></p>
-	<h2>Priorities</h2>
-		<p>1. <%= @day.day_priority_1 %></p>
-		<p>2. <%= @day.day_priority_2 %></p>
-		<p>3. <%= @day.day_priority_3 %></p>
-		<p>4. <%= @day.day_priority_4 %></p>
-		<p>5. <%= @day.day_priority_5 %></p>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-6">
+		    <h2>3 things you are grateful for</h2>
+				<p>1. <%= @day.day_grateful_1 %></p>
+				<p>2. <%= @day.day_grateful_2 %></p>
+				<p>3. <%= @day.day_grateful_3 %></p>
+			<h2>3 things you are excited for</h2>
+				<p>1. <%= @day.day_excited_1 %></p>
+				<p>2. <%= @day.day_excited_2 %></p>
+				<p>3. <%= @day.day_excited_3 %></p>
+			<h2>Affirmation</h2>
+				<p><%= @day.day_affirmation %></p>
+			<h2>Focus</h2>
+				<p><%= @day.day_focus %></p>
+			<h2>Exercise</h2>
+				<p><%= @day.day_exercise %></p>
+			<h2>Priorities</h2>
+				<p>1. <%= @day.day_priority_1 %></p>
+				<p>2. <%= @day.day_priority_2 %></p>
+				<p>3. <%= @day.day_priority_3 %></p>
+				<p>4. <%= @day.day_priority_4 %></p>
+				<p>5. <%= @day.day_priority_5 %></p>
+		</div>
+    	<div class="col-lg-6">
+    		<h2>Schedule of the day</h2>
+				<p>6AM: <%= @day.day_hour_6 %></p>
+				<p>7AM: <%= @day.day_hour_7 %></p>
+				<p>8AM: <%= @day.day_hour_8 %></p>
+				<p>9AM: <%= @day.day_hour_9 %></p>
+				<p>10AM: <%= @day.day_hour_10 %></p>
+				<p>11AM: <%= @day.day_hour_11 %></p>
+				<p>12AM: <%= @day.day_hour_12 %></p>
+				<p>1PM: <%= @day.day_hour_13 %></p>
+				<p>2PM: <%= @day.day_hour_14 %></p>
+				<p>3PM: <%= @day.day_hour_15 %></p>
+				<p>4PM: <%= @day.day_hour_16 %></p>
+				<p>5PM: <%= @day.day_hour_17 %></p>
+				<p>6PM: <%= @day.day_hour_18 %></p>
+				<p>7PM: <%= @day.day_hour_19 %></p>
+				<p>8PM: <%= @day.day_hour_20 %></p>
+				<p>9PM: <%= @day.day_hour_21 %></p>		
+			<h2>Tasks</h2>
+				<p>1. <%= @day.day_task_1 %></p>
+				<p>2. <%= @day.day_task_2 %></p>
+				<p>3. <%= @day.day_task_3 %></p>
+				<p>4. <%= @day.day_task_4 %></p>
+				<p>5. <%= @day.day_task_5 %></p>
+				<p>6. <%= @day.day_task_6 %></p>
+				<p>7. <%= @day.day_task_7 %></p>
+				<p>8. <%= @day.day_task_8 %></p>
+				<p>9. <%= @day.day_task_9 %></p>
+				<p>10. <%= @day.day_task_10 %></p>		
+			<h2>Tasks and their content:</h2>	
+			    <% @day.tasks.includes(:hour).each do |task| %>
+				    <%= task.hour.hour_number %>. <%= task.task_content %> <br>
+			    <% end %>
+			<h2>Notes</h2>
+				<p><%= @day.day_notes %></p>
+			<h2>Wins of the day</h2>
+				<p>1. <%= @day.day_win_1 %></p>
+				<p>2. <%= @day.day_win_2 %></p>
+				<p>3. <%= @day.day_win_3 %></p>
+			<h2>Improvement for tomorrow</h2>
+				<p><%= @day.day_improvement %></p>
+    	</div>
+  	</div>
 </div>
 
-<div>
-	<h2>Schedule of the day</h2>
-		<p>6AM: <%= @day.day_hour_6 %></p>
-		<p>7AM: <%= @day.day_hour_7 %></p>
-		<p>8AM: <%= @day.day_hour_8 %></p>
-		<p>9AM: <%= @day.day_hour_9 %></p>
-		<p>10AM: <%= @day.day_hour_10 %></p>
-		<p>11AM: <%= @day.day_hour_11 %></p>
-		<p>12AM: <%= @day.day_hour_12 %></p>
-		<p>1PM: <%= @day.day_hour_13 %></p>
-		<p>2PM: <%= @day.day_hour_14 %></p>
-		<p>3PM: <%= @day.day_hour_15 %></p>
-		<p>4PM: <%= @day.day_hour_16 %></p>
-		<p>5PM: <%= @day.day_hour_17 %></p>
-		<p>6PM: <%= @day.day_hour_18 %></p>
-		<p>7PM: <%= @day.day_hour_19 %></p>
-		<p>8PM: <%= @day.day_hour_20 %></p>
-		<p>9PM: <%= @day.day_hour_21 %></p>		
-</div>
-
-<div>
-	<h2>Tasks</h2>
-		<p>1. <%= @day.day_task_1 %></p>
-		<p>2. <%= @day.day_task_2 %></p>
-		<p>3. <%= @day.day_task_3 %></p>
-		<p>4. <%= @day.day_task_4 %></p>
-		<p>5. <%= @day.day_task_5 %></p>
-		<p>6. <%= @day.day_task_6 %></p>
-		<p>7. <%= @day.day_task_7 %></p>
-		<p>8. <%= @day.day_task_8 %></p>
-		<p>9. <%= @day.day_task_9 %></p>
-		<p>10. <%= @day.day_task_10 %></p>
-
-
-	<h2>Tasks and their content:</h2>	
-	    <% @day.tasks.includes(:hour).each do |task| %>
-		    <%= task.hour.hour_number %>. <%= task.task_content %> <br>
-	    <% end %>
-</div>
-
-<div>
-	<h2>Notes</h2>
-		<p><%= @day.day_notes %></p>
-	<h2>Wins of the day</h2>
-		<p>1. <%= @day.day_win_1 %></p>
-		<p>2. <%= @day.day_win_2 %></p>
-		<p>3. <%= @day.day_win_3 %></p>
-	<h2>Improvement for tomorrow</h2>
-		<p><%= @day.day_improvement %></p>
-</div>
 
 <%= link_to("Edit #{@day.day_day_date}", edit_day_path(@day)) %><br>
 <%= link_to("Delete #{@day.day_day_date}", day_path(@day), method: :delete, data: { confirm: 'Are you sure?' } ) %>
