--- a/app/views/days/_form.html.erb
+++ b/app/views/days/_form.html.erb
@@ -28,25 +28,7 @@
 	2. <%= f.text_field :day_priority_2 %><br>
 	3. <%= f.text_field :day_priority_3 %><br>
 	4. <%= f.text_field :day_priority_4 %><br>
-	5. <%= f.text_field :day_priority_5 %><br>
-
-	<label>Schedule: </label><br>
-	6AM: <%= f.text_field :day_hour_6 %><br>
-	7AM: <%= f.text_field :day_hour_7 %><br>
-	8AM: <%= f.text_field :day_hour_8 %><br>
-	8AM: <%= f.text_field :day_hour_9 %><br>
-	10AM: <%= f.text_field :day_hour_10 %><br>
-	11AM: <%= f.text_field :day_hour_11 %><br>
-	12PM: <%= f.text_field :day_hour_12 %><br>
-	1PM: <%= f.text_field :day_hour_13 %><br>
-	2PM: <%= f.text_field :day_hour_14 %><br>
-	3PM: <%= f.text_field :day_hour_15 %><br>
-	4PM: <%= f.text_field :day_hour_16 %><br>
-	5PM: <%= f.text_field :day_hour_17 %><br>
-	6PM: <%= f.text_field :day_hour_18 %><br>
-	7PM: <%= f.text_field :day_hour_19 %><br>
-	8PM: <%= f.text_field :day_hour_20 %><br>
-	9PM: <%= f.text_field :day_hour_21 %><br><br>
+	5. <%= f.text_field :day_priority_5 %><br><br>
 
 	<label>Hours and Task Content:</label><br>
 	<p>If you haven't already, please go generate some hours (in military time 24:00). </p>
