--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -54,26 +54,24 @@
   	</div>
 </div>
 
+<h1><%= @day.id %>: <%= @day.day_day_date %></h1>
+<div>
+	<% @day.tasks.includes(:hour).each do |task| %>
+		<%= task.hour.hour_number %>. <%= task.task_content %> <br>
+	<% end %>
+</div>
+<br><br>
 
-
+<!-- this should be using js-->
 <a href="#" class="js-next" data-id="<%=@day.id%>">Next Day</a>
 <h1 class="dayDayDate"><%= @day.day_day_date %></h1>
 
-<script type="text/javascript" charset="utf-8">
-$(function () {
-  $(".js-next").on("click", function() {
-    var nextId = parseInt($(".js-next").attr("data-id")) + 1;
-    $.get("/days/" + nextId + ".json", function(data) {
-      $(".dayDayDate").text(data["day_day_date"]);
-      // re-set the id to current on the link
-      $(".js-next").attr("data-id", data["id"]);
-    });
-  });
-});
-</script>
+<button class="js-more" data-id="<%= @day.id %>">Doesnt work...</button>
 
 
 
+<br>
+<br>
 
 <%= link_to("Edit #{@day.day_day_date}", edit_day_path(@day)) %><br>
 <%= link_to("Delete #{@day.day_day_date}", day_path(@day), method: :delete, data: { confirm: 'Are you sure?' } ) %>
