--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -65,10 +65,10 @@
 -->
 
 <!-- this should be using js-->
-<a href="#" class="js-next" data-id="<%=@day.id%>">Next Day</a>
+
 <h1 class="dayDayDate"><%= @day.day_day_date %></h1>
 
-<button class="js-more" data-id="<%= @day.id %>">Next Day</button>
+<button class="js-next" data-id="<%= @day.id %>">Next Day</button>
 
 <script type="text/javascript" charset="utf-8">	
  $(function () {
