--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -68,6 +68,71 @@
 
 <h1 class="dayDayDate"><%= @day.day_day_date %></h1>
 
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-6">
+		    <h2>3 things you are grateful for</h2>
+				<ol>
+					<li class="dayGrateful1"><%= @day.day_grateful_1 %></li>
+					<li class="dayGrateful2"><%= @day.day_grateful_2 %></li>
+					<li class="dayGrateful3"><%= @day.day_grateful_3 %></li>
+				</ol>
+			<h2>3 things you are excited for</h2>
+				<ol>
+					<li class="dayExcited1"><%= @day.day_excited_1 %></li>
+					<li class="dayExcited2"><%= @day.day_excited_2 %></li>
+					<li class="dayExcited3"><%= @day.day_excited_3 %></li>
+				</ol>
+			<h2>Affirmation</h2>
+				<p class="dayAffirmation"><%= @day.day_affirmation %></p>
+			<h2>Focus</h2>
+				<p class="dayFocus"><%= @day.day_focus %></p>
+			<h2>Exercise</h2>
+				<p class="dayExercise"><%= @day.day_exercise %></p>
+			<h2>Priorities</h2>
+				<ol>
+					<li class="dayPriority1"><%= @day.day_priority_1 %></li>
+					<li class="dayPriority2"><%= @day.day_priority_2 %></li>
+					<li class="dayPriority3"><%= @day.day_priority_3 %></li>
+					<li class="dayPriority2"><%= @day.day_priority_4 %></li>
+					<li class="dayPriority3"><%= @day.day_priority_5 %></li>
+				</ol>
+			<h2>Tasks</h2>
+				<ol>
+					<li class="dayTask1"><%= @day.day_task_1 %></li>
+					<li class="dayTask2"><%= @day.day_task_2 %></li>
+					<li class="dayTask3"><%= @day.day_task_3 %></li>
+					<li class="dayTask4"><%= @day.day_task_4 %></li>
+					<li class="dayTask5"><%= @day.day_task_5 %></li>
+					<li class="dayTask6"><%= @day.day_task_6 %></li>
+					<li class="dayTask7"><%= @day.day_task_7 %></li>
+					<li class="dayTask8"><%= @day.day_task_8 %></li>
+					<li class="dayTask9"><%= @day.day_task_9 %></li>
+					<li class="dayTask10"><%= @day.day_task_10 %></li>
+				</ol>		
+		</div>
+    	<div class="col-lg-6">	
+    		<h2>Hours and their associated task content:</h2>	
+			    <% @day.tasks.includes(:hour).each do |task| %>
+				    <%= task.hour.hour_number %>. <%= task.task_content %> <br>
+			    <% end %>
+			<h2>Notes</h2>
+				<p class="dayNotes"><%= @day.day_notes %></p>
+			<h2>Wins of the day</h2>
+				<ol>
+					<li class="dayWin1"><%= @day.day_win_1 %></li>
+					<li class="dayWin2"><%= @day.day_win_2 %></li>
+					<li class="dayWin3"><%= @day.day_win_3 %></li>
+				</ol>
+			<h2>Improvement for tomorrow</h2>
+				<p class="dayImprovement"><%= @day.day_improvement %></p>
+    	</div>
+  	</div>
+</div>
+
+
+
 <button class="js-next" data-id="<%= @day.id %>">Next Day</button>
 
 <script type="text/javascript" charset="utf-8">	
@@ -76,6 +141,35 @@
      var nextId = parseInt($(".js-next").attr("data-id")) + 1;
      $.get("/days/" + nextId + ".json", function(data) {
        $(".dayDayDate").text(data["day_day_date"]);
+       $(".dayGrateful1").text(data["day_grateful_1"]);
+       $(".dayGrateful2").text(data["day_grateful_2"]);
+       $(".dayGrateful3").text(data["day_grateful_3"]);
+       $(".dayExcited1").text(data["day_excited_1"]);
+       $(".dayExcited2").text(data["day_excited_2"]);
+       $(".dayExcited3").text(data["day_excited_3"]);
+       $(".dayAffirmation").text(data["day_affirmation"]);
+       $(".dayFocus").text(data["day_focus"]);
+       $(".dayExercise").text(data["day_exercise"]);
+       $(".dayPriority1").text(data["day_priority_1"]);
+       $(".dayPriority2").text(data["day_priority_2"]);
+       $(".dayPriority3").text(data["day_priority_3"]);
+       $(".dayPriority4").text(data["day_priority_4"]);
+       $(".dayPriority5").text(data["day_priority_5"]);
+       $(".dayTask1").text(data["day_task_1"]);
+       $(".dayTask2").text(data["day_task_2"]);
+       $(".dayTask3").text(data["day_task_3"]);
+       $(".dayTask4").text(data["day_task_4"]);
+       $(".dayTask5").text(data["day_task_5"]);
+       $(".dayTask6").text(data["day_task_6"]);
+       $(".dayTask7").text(data["day_task_7"]);
+       $(".dayTask8").text(data["day_task_8"]);
+       $(".dayTask9").text(data["day_task_9"]);
+       $(".dayTask10").text(data["day_task_10"]);
+       $(".dayNotes").text(data["day_notes"]);
+       $(".dayWin1").text(data["day_win_1"]);
+       $(".dayWin2").text(data["day_win_2"]);
+       $(".dayWin3").text(data["day_win_3"]);
+       $(".dayImprovement").text(data["day_improvement"]);
        // re-set the id to current on the link
        $(".js-next").attr("data-id", data["id"]);
      });
