fix index day view

--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -2,12 +2,12 @@
 
 <% @days.each do |day| %>
   <li><%= link_to day.day_day_date, day_path(day) %></li>
-<% end %> -->
+<% end %>-->
 
 
 <h1>Here are all of your days:</h1>
 <% @days.each do |day| %>
-  <h3><%= day.day_day_date %></h3>
+  <h3><%= link_to day.day_day_date, day_path(day) %></h3>
   <div id="day-<%= day.id %>">Affirmation: <%= day.day_affirmation %></div>
   <button class="js-more" data-id="<%= day.id %>">More Info</button>
 <% end %>
