--- a/app/views/days/show.html.erb
+++ b/app/views/days/show.html.erb
@@ -57,8 +57,8 @@
 			    <!--<div class="dayTaskHourHourNumber dayTaskTaskContent">
 				    <% @day.tasks.includes(:hour).each do |task| %>
 					    <%= task.hour.hour_number %>. <%= task.task_content %> <br>
-				    <% end %>-->
-				</div>
+				    <% end %>
+				</div>-->
 			<h2>Notes</h2>
 				<ul class="dayNotes">
 					<li><%= @day.day_notes %></li>
